# py_project

./: .gitignore  LICENSE  README.md  prac.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/main/: index.rst
docs/source/main/actions/: contents.md
docs/source/main/packaging/: contents.md
docs/source/main/read_the_docs/: contents.md
src/example_package_NAME/: _version.py
